tests/ui/rustdoc/doc-test-attr.stderr
error: `#[doc(test(...)]` takes a list of attributes
  --> $DIR/doc-test-attr.rs:4:8
   |
LL | #![doc(test)]
   |        ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
note: the lint level is defined here
  --> $DIR/doc-test-attr.rs:2:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: `#[doc(test(...)]` takes a list of attributes
  --> $DIR/doc-test-attr.rs:7:8
   |
LL | #![doc(test = "hello")]
   |        ^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>

error: unknown `doc(test)` attribute `a`
  --> $DIR/doc-test-attr.rs:10:13
   |
LL | #![doc(test(a))]
   |             ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>

error: aborting due to 3 previous errors

